httpbin-global-ratelimit/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: httpbin-global-ratelimit
  labels:
    istio-injection: enabled
