httpbin-global-ratelimit/rt-global-enable.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: httpbin-global-ratelimit
  namespace: istio-ingress
spec:
  workloadSelector:
    # select by label in the same namespace
    labels:
      istio: ingress-private
  configPatches:
    # The Envoy config you want to modify
    - applyTo: HTTP_FILTER
      match:
        context: GATEWAY
        listener:
          filterChain:
            sni: "httpbin-global-ratelimit.${cluster_subdomain}"
            filter:
              name: "envoy.filters.network.http_connection_manager"
              subFilter:
                name: "envoy.filters.http.router"
      patch:
        operation: INSERT_BEFORE
        # Adds the Envoy Rate Limit Filter in HTTP filter chain.
        value:
          name: envoy.filters.http.ratelimit
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.ratelimit.v3.RateLimit
            # domain can be anything! Match it to the ratelimter service config
            domain: ratelimit
            failure_mode_deny: false
            timeout: 10s
            rate_limit_service:
              grpc_service:
                envoy_grpc:
                  cluster_name: outbound|8081||ratelimit.httpbin-global-ratelimit.svc.cluster.local
                  authority: ratelimit.httpbin-global-ratelimit.svc.cluster.local
              transport_api_version: V3
    # The Envoy config you want to modify
    - applyTo: HTTP_FILTER
      match:
        context: GATEWAY
        listener:
          filterChain:
            sni: "httpbin-global-ratelimit.${cluster_subdomain}"
            filter:
              name: "envoy.filters.network.http_connection_manager"
              subFilter:
                name: "envoy.filters.http.ratelimit"
      patch:
        operation: INSERT_BEFORE
        # Adds the Envoy Header to Metadata Filter in HTTP filter chain.
        value:
          name: envoy.filters.header_metadata
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.filters.http.header_to_metadata.v3.Config
            request_rules:
              - cookie: TEST
                on_header_present:
                  metadata_namespace: envoy.lb
                  key: TEST
                  type: STRING
                on_header_missing:
                  metadata_namespace: envoy.lb
                  key: TEST
                  value: "NO"
                  type: STRING
