httpbin-global-ratelimit/rt-httpbin-rate-limit.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: httpbin-global-ratelimit-route
  namespace: istio-ingress
spec:
  workloadSelector:
    labels:
      istio: ingress-private
  configPatches:
    - applyTo: HTTP_ROUTE
      match:
        context: GATEWAY
        routeConfiguration:
          vhost:
            name: "httpbin-global-ratelimit.${cluster_subdomain}:443"
            route:
              action: ANY
      patch:
        operation: MERGE
        value:
          route:
            rate_limits:
              - actions:
                  - header_value_match:
                      descriptor_key: "PATH"
                      descriptor_value: "/headers"
                      headers:
                        - name: :path
                          string_match:
                            prefix: /headers
                            ignore_case: true
                  - request_headers:
                      header_name: custom-header
                      descriptor_key: custom_header
              - action:
                  - metadata:
                      descriptor_key: COOKIE_K1
                      metadata_key:
                        key: envoy.lb
                        path:
                          - key: k1
